force-app/main/default/objects/TimeSheetEntry/fields/End_Time_without_seconds__c.field-meta.xml
<CustomField>
    <fullName>End_Time_without_seconds__c</fullName>
    <formula>EndTime-SECOND(timevalue(EndTime))/86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time without seconds</label>
    <type>DateTime</type>
</CustomField>