force-app/main/default/objects/TimeSheetEntry/fields/LUM_TimesheetEntryDisplayText__c.field-meta.xml
<CustomField>
    <fullName>LUM_TimesheetEntryDisplayText__c</fullName>
    <formula>IF( ISNULL(WorkOrder.Account.Name), TEXT(Type), WorkOrder.Account.Name &amp;&quot; - &quot; &amp; TEXT(Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimesheetEntryDisplayText</label>
    <type>Text</type>
</CustomField>