force-app/main/default/objects/TimeSheetEntry/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <description>Indicates what is the travel length required to the customer site.</description>
    <label>Mileage</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>