force-app/main/default/objects/TimeSheetEntry/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>In case the Installer needs to add some comments about the done work.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>