force-app/main/default/objects/TimeSheetEntry/fields/RVN__c.field-meta.xml
<CustomField>
    <fullName>RVN__c</fullName>
    <formula>WorkOrderLineItem.Configuration_Product__r.RVN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVN</label>
    <type>Text</type>
</CustomField>