force-app/main/default/objects/TimeSheetEntry/fields/Start_time_without_seconds__c.field-meta.xml
<CustomField>
    <fullName>Start_time_without_seconds__c</fullName>
    <formula>StartTime -SECOND(timevalue(StartTime))/86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start time without seconds</label>
    <type>DateTime</type>
</CustomField>