force-app/main/default/objects/TimeSheetEntry/fields/Trailer__c.field-meta.xml
<CustomField>
    <fullName>Trailer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a trailer was used during the travel to the customer site.</description>
    <label>Trailer</label>
    <type>Checkbox</type>
</CustomField>